--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,3 +1,4 @@
+{{- if ne .chezmoi.os "windows" }}
 [".oh-my-zsh"]
     type = "archive"
     url = "https://github.com/ohmyzsh/ohmyzsh/archive/master.tar.gz"
@@ -16,6 +17,7 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+{{- end }}
 # [".vim/autoload/plug.vim"]
 #     type = "file"
 #     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
